--- a/sk/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/sk/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -37,90 +37,280 @@
 #
 # ***** END LICENSE BLOCK *****
 
-repeatDetailsRuleDaily1=každý deň
-repeatDetailsRuleDaily2=každý druhý deň
-repeatDetailsRuleDaily3=každých %1$S dní
+# LOCALIZATION NOTE (dailyEveryNth):
+# Edit recurrence window -> Recurrence pattern -> Daily repeat rules
+# #1 - number
+# e.g. "every 4 days"
+dailyEveryNth=každý deň;každé #1 dni;každých #1 dní
 repeatDetailsRuleDaily4=každý pracovný deň
 
-repeatDetailsRuleWeekly1=vždy v %1$S
-repeatDetailsRuleWeekly2=každý druhý týždeň v %1$S
-repeatDetailsRuleWeekly3=každý %1$S týždeň v %2$S
-repeatDetailsRuleWeekly4=každý týždeň
-repeatDetailsRuleWeekly5=každý druhý týždeň
-repeatDetailsRuleWeekly6=každé %1$S týždne
+# LOCALIZATION NOTE (weeklyNthOnNounclass...)
+# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
+# Translate these strings according to noun class/gender of weekday (%1$S) 
+# set in 'repeadDetailsDay...Nounclass' strings.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add others strings with suffix 3, 4,... for others noun classes if your
+# language need them. In this case, corresponding strings must be added for
+# others rule strings with 'Nounclass...' suffix and corresponding values 
+# "nounclass..." must be written in 'repeatDetailsDayxNounclass' strings.
+# %1$S - weekday (one or more)
+# #2 - week interval
+# e.g. "every 3 weeks on Tuesday, Wednesday and Thursday
+weeklyNthOnNounclass1=každý %1$S;každé #2 týždne v %1$S;každých #2 týždňov v %1$S
+weeklyNthOnNounclass2=každú %1$S;každé #2 týždne v %1$S;každých #2 týždňov v %1$S
 
-repeatDetailsDay1=Nedeľu
-repeatDetailsDay2=Pondelok
-repeatDetailsDay3=Utorok
-repeatDetailsDay4=Streda
-repeatDetailsDay5=Štvrtok
-repeatDetailsDay6=Piatok
-repeatDetailsDay7=Sobotu
+# LOCALIZATION NOTE (weeklyEveryNth):
+# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
+# #1 - interval
+# e.g. "every 5 weeks"
+weeklyEveryNth=každý týždeň;každé #1 týždne;každých #1 týždňov
+
+# LOCALIZATION NOTE ('repeatDetailsDay...' and 'repeatDetailsDay...Nounclass'):
+# Week days names and week days noun classes (feminine/masculine grammatical
+# gender) for languages that need different localization when weekdays nouns
+# have different noun classes (genders).
+# For every weekday, in 'repeatDetailsDay...Nounclass' strings write:
+#   "nounclass1"     for languages with grammatical genders -> MASCULINE gender;
+#                    for languages with noun classes -> a noun class;
+#                    for languages without noun classes or grammatical gender.
+#
+#   "nounclass2"     for languages with grammatical genders -> FEMININE gender;
+#                    for languages with noun classes -> a different noun class.
+#
+#   "nounclass3", "nounclass4" and so on for languages that need more than two 
+#                    noun classes for weekdays. In this case add corresponding
+#                    rule string with "Nounclass..." suffix and ordinal string
+#                    "repeatOrdinalxNounclass..."
+# Will be used rule strings with "Nounclass..." suffix corresponding to the 
+# following strings if there is a weekday in the rule string.
+repeatDetailsDay1=nedeľu
+repeatDetailsDay1Nounclass=nounclass2
+repeatDetailsDay2=pondelok
+repeatDetailsDay2Nounclass=nounclass1
+repeatDetailsDay3=utorok
+repeatDetailsDay3Nounclass=nounclass1
+repeatDetailsDay4=stredu
+repeatDetailsDay4Nounclass=nounclass2
+repeatDetailsDay5=štvrtok
+repeatDetailsDay5Nounclass=nounclass1
+repeatDetailsDay6=piatok
+repeatDetailsDay6Nounclass=nounclass1
+repeatDetailsDay7=sobotu
+repeatDetailsDay7Nounclass=nounclass2
+
+# LOCALIZATION NOTE (repeatDetailsAnd)
+# Used to show a number of weekdays in a list
+# i.e. "Sunday, Monday, Tuesday " + and + " Wednesday"
 repeatDetailsAnd=a
 
-repeatDetailsRuleMonthly=%1$S %2$S každý mesiac
-repeatDetailsRuleMonthly2=%1$S %2$S každý druhý mesiac
-repeatDetailsRuleMonthly3=%1$S %2$S každý %3$S. mesiac
-repeatDetailsRuleMonthly4=%1$S deň, každý mesiac
-repeatDetailsRuleMonthly5=%1$S deň, každý druhý mesiac
-repeatDetailsRuleMonthly6=%1$S deň, každý %2$S. mesiac
-repeatDetailsRuleMonthly7=posledný deň v mesiaci
-repeatDetailsRuleMonthly8=posledný deň v každom druhom mesiaci
-repeatDetailsRuleMonthly9=posledný deň v každom %1$S. mesiaci
+# LOCALIZATION NOTE (monthlyNthOfEveryNounclass...):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# Translate these strings according to noun class/gender of weekday (%2$S) 
+# set in 'repeadDetailsDay...Nounclass' strings.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add others strings with suffix 3, 4,... for others noun classes if your
+# language need them. In this case, corresponding strings must be added for
+# others rule strings with 'Nounclass...' suffix and corresponding values 
+# "nounclass..." must be written in 'repeatDetailsDayxNounclass' strings. 
+# %1$S - ordinal with article and noun class/gender corresponding to weekday
+# %2$S - weekday
+# #3 - interval
+# i.e. "the FIRST MONDAY of every 3 months"
+monthlyNthOfEveryNounclass1=%1$S %2$S v mesiaci;%1$S %2$S v mesiaci každé #3 mesiace;%1$S %2$S v mesiaci každé #3 mesiace
+monthlyNthOfEveryNounclass2=%1$S %2$S v mesiaci;%1$S %2$S v mesiaci každé #3 mesiace;%1$S %2$S v mesiaci každé #3 mesiace
 
-repeatDetailsOrdinal1=prvý
-repeatDetailsOrdinal2=druhý
-repeatDetailsOrdinal3=tretí
-repeatDetailsOrdinal4=štvrtý
-repeatDetailsOrdinal5=piaty
-repeatDetailsOrdinal-1=posledný
+# LOCALIZATION NOTE (monthlyEveryOfEveryNounclass...):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# Translate these strings according to noun class/gender of weekday (%1$S) 
+# set in 'repeadDetailsDay...Nounclass' strings.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add others strings with suffix 3, 4,... for others noun classes if your
+# language need them. In this case, corresponding strings must be added for
+# others rule strings with 'Nounclass...' suffix and corresponding values 
+# "nounclass..." must be written in 'repeatDetailsDayxNounclass' strings.
+# %1$S - weekday
+# #2 - interval
+# i.e. "every MONDAY of every 3 months" 
+#  more specific: every monday of January, April, July, October
+monthlyEveryOfEveryNounclass1=každý mesiac vždy v %1$S;každé #2 mesiace vždy v %1$S;každých #2 mesiacov vždy v %1$S 
+monthlyEveryOfEveryNounclass2=každý mesiac vždy v %1$S;každé #2 mesiace vždy v %1$S;každých #2 mesiacov vždy v %1$S
 
-repeatDetailsRuleYearly1=každý %1$S %2$S
-repeatDetailsRuleYearly2=každý druhý rok v %1$S %2$S
-repeatDetailsRuleYearly3=každé %3$S roky v %1$S %2$S
-repeatDetailsRuleYearly4=%1$S %2$S v %3$S
-repeatDetailsRuleYearly5=každý druhý rok %1$S %2$S v %3$S
-repeatDetailsRuleYearly6=každé %4$S roky %1$S %2$S v %3$S
+# LOCALIZATION NOTE (monthlyDayOfNth):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - day of month
+# #2 - month interval
+# e.g. "day 3 of every 2 months"
+monthlyDayOfNth=%1$S. deň v mesiaci;%1$S. deň v každom #2 mesiaci;%1$S. deň v každom #2 mesiaci
 
-repeatDetailsMonth1=Január
-repeatDetailsMonth2=Február
-repeatDetailsMonth3=Marec
-repeatDetailsMonth4=Apríl
-repeatDetailsMonth5=Máj
-repeatDetailsMonth6=Jún
-repeatDetailsMonth7=Júl
-repeatDetailsMonth8=August
-repeatDetailsMonth9=September
-repeatDetailsMonth10=Október
-repeatDetailsMonth11=November
-repeatDetailsMonth12=December
+# LOCALIZATION NOTE (monthlyLastDayOfNth):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - day of month
+# #2 - month interval
+# e.g. "the last day of every 3 months"
+monthlyLastDayOfNth=posledný deň v mesiaci; posledný deň v každom #1 mesiaci; posledný deň v každom #1 mesiaci
 
-repeatDetailsCount=Nastane %1$S\naktívna %2$S %3$S krát\nv čase od %4$S do %5$S.
-repeatDetailsCountAllDay=Nastane %1$S\naktívna %2$S pre %3$S krát.
-repeatDetailsUntil=Nastane %1$S\naktívna %2$S do %3$S\n v čase od %4$S do %5$S.
-repeatDetailsUntilAllDay=Nastane %1$S\naktívna %2$S do %3$S.
-repeatDetailsInfinite=Nastane %1$S\naktívna %2$S\n v čase od %3$S do %4$S.
-repeatDetailsInfiniteAllDay=Nastane %1$S\naktívna %2$S.
+# LOCALIZATION NOTE (monthlyEveryDayOfNth):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# #2 - month interval
+# e.g. "every day of the month every 4 months"
+monthlyEveryDayOfNth=denne v každom mesiaci;denne každé #2 mesiace;denne každých #2 mesiacov
 
-reminderCustomTitle=%1$S %2$S %3$S %4$S
-reminderTitleAtStartEvent=Moment začiatku udalosti
-reminderTitleAtStartTask=Moment začiatku úlohy
-reminderTitleAtEndEvent=Moment konca udalosti
-reminderTitleAtEndTask=Moment konca úlohy
-reminderCustomUnitMinute=minútu
-reminderCustomUnitMinutes=minút
-reminderCustomUnitHour=hodinu
-reminderCustomUnitHours=hodín
-reminderCustomUnitDay=deň
-reminderCustomUnitDays=dní
-reminderCustomRelationBefore=pred
-reminderCustomRelationAfter=po
-reminderCustomOriginBeginEvent=začiatkom udalosti
-reminderCustomOriginEndEvent=koncom udalosti
-reminderCustomOriginBeginTask=začiatkom úlohy
-reminderCustomOriginEndTask=koncom úlohy
-reminderErrorMaxCountReachedEvent=Vybraný kalendár má obmedzenie na %1$S pripomienok na jednu udalosť.
-reminderErrorMaxCountReachedTask=Vybraný kalendár má obmedzenie na %1$S pripomienok na jednu úlohu.
+# LOCALIZATION NOTE (repeatOrdinal...Nounclass...):
+# Ordinal numbers nouns for every noun class (grammatical genders) of weekdays
+# considered in 'repeatDetailsDayxNounclass' strings. For languages that need
+# localization according to genders or noun classes.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add 'repeatOrdinal...Nounclass' strings with suffix 3, 4 and so on for
+# languages with more than two noun classes for weekdays. In this case 
+# must be added corresponding rule strings with 'Nounclass...' suffix and 
+# corresponding values "nounclass..." must be written in
+# 'repeatDetailsDayxNounclass' strings.
+repeatOrdinal1Nounclass1=prvý
+repeatOrdinal2Nounclass1=druhý
+repeatOrdinal3Nounclass1=tretí
+repeatOrdinal4Nounclass1=štvrtý
+repeatOrdinal5Nounclass1=piaty
+repeatOrdinal-1Nounclass1=posledný
+repeatOrdinal1Nounclass2=prvú
+repeatOrdinal2Nounclass2=druhú
+repeatOrdinal3Nounclass2=tretiu
+repeatOrdinal4Nounclass2=štvrtú
+repeatOrdinal5Nounclass2=piatu
+repeatOrdinal-1Nounclass2=poslednú
+
+# LOCALIZATION NOTE (yearlyNthOn):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - month
+# %2$S - day of month
+# #3 - yearly interval
+# e.g. "every 3 years on December 14"
+yearlyNthOn=každý rok dňa %1$S %2$S;každé #3 roky dňa %1$S %2$S;každých #3 rokov dňa %1$S %2$S
+
+# LOCALIZATION NOTE (yearlyNthOnNthOfNounclass...):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# Translate these strings according to noun class/gender of weekday (%2$S) 
+# set in 'repeadDetailsDay...Nounclass' strings.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add others strings with suffix 3, 4,... for others noun classes if your
+# language need them. In this case, corresponding strings must be added for
+# others rule strings with 'Nounclass...' suffix and corresponding values 
+# "nounclass..." must be written in 'repeatDetailsDayxNounclass' strings.
+# %1$S - ordinal with article and noun class/gender corresponding to weekday
+# %2$S - weekday
+# %3$S - month
+# #4 - yearly interval
+# e.g. "the second Monday of every March"
+# e.g  "every 3 years the second Monday of March"
+yearlyNthOnNthOfNounclass1=%1$S %2$S každý rok v mesiaci %3$S;každé #4 roky %1$S %2$S v mesiaci %3$S;každých #4 rokov %1$S %2$S v mesiaci %3$S
+yearlyNthOnNthOfNounclass2=%1$S %2$S každý rok v mesiaci %3$S;každé #4 roky %1$S %2$S v mesiaci %3$S;každých #4 rokov %1$S %2$S v mesiaci %3$S
+
+# LOCALIZATION NOTE (yearlyOnEveryNthOfNthNounclass1):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# Translate these strings according to noun class/gender of weekday (%1$S) 
+# set in 'repeadDetailsDay...Nounclass' strings.
+# Nounclass1 <-> Masculine gender; Nounclass2 <-> Feminine gender.
+# Add others strings with suffix 3, 4,... for others noun classes if your
+# language need them. In this case, corresponding strings must be added for
+# others rule strings with 'Nounclass...' suffix and corresponding values 
+# "nounclass..." must be written in 'repeatDetailsDayxNounclass' strings.
+# %1$S - weekday
+# %2$S - month
+# #3 - yearly interval
+# e.g. "every Thursday of March"
+# e.g  "every 3 years on every Thursday of March"
+yearlyOnEveryNthOfNthNounclass1=vždy v %1$S v mesiaci %2$S;každé #3 roky vždy v %1$S v mesiaci %2$S;každých #3 rokov vždy v %1$S v mesiaci %2$S
+yearlyOnEveryNthOfNthNounclass2=vždy v %1$S v mesiaci %2$S;každé #3 roky vždy v %1$S v mesiaci %2$S;každých #3 rokov vždy v %1$S v mesiaci %2$S
+
+repeatDetailsMonth1=január
+repeatDetailsMonth2=február
+repeatDetailsMonth3=marec
+repeatDetailsMonth4=apríl
+repeatDetailsMonth5=máj
+repeatDetailsMonth6=jún
+repeatDetailsMonth7=júl
+repeatDetailsMonth8=august
+repeatDetailsMonth9=september
+repeatDetailsMonth10=október
+repeatDetailsMonth11=november
+repeatDetailsMonth12=december
+
+# LOCALIZATION NOTE (repeatCount):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - A rule string (see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event start time (e.g. hh:mm (PM/AM))
+# %4$S - event end time (e.g. hh:mm (PM/AM))
+# #5 - event occurence times: number
+# e.g. with monthlyNthOfEvery:
+# "Occurs the first Sunday of every 3 month
+#  only on 1/1/2009"
+#  from 5:00 PM to 6:00 PM"
+# "Occurs the first Sunday of every 3 month
+#  effective 1/1/2009 for 5 times
+#  from 5:00 PM to 6:00 PM"
+repeatCount=Nastane %1$S\naktívna dňa %2$S #5 krát\nod %3$S do %4$S.;Nastane %1$S\naktívna dňa %2$S #5 krát\nod %3$S do %4$S.;Nastane %1$S\naktívna dňa %2$S #5 krát\nod %3$S do %4$S.
+
+# LOCALIZATION NOTE (repeatCountAllDay):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - A rule string (see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# #3 - event occurence times: number
+# e.g. with monthlyNthOfEvery:
+# "Occurs the first Sunday of every 3 month
+#  only on 1/1/2009"
+# "Occurs the first Sunday of every 3 month
+#  effective 1/1/2009 for 5 times"
+repeatCountAllDay=Nastane %1$S\naktívna dňa %2$S #3 krát.;Nastane %1$S\naktívna dňa %2$S #3 krát.;Nastane %1$S\naktívna dňa %2$S #3 krát.
+
+# LOCALIZATION NOTE (repeatDetailsUntil):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - A rule string (see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event end date (e.g. mm/gg/yyyy)
+# %4$S - event start time (e.g. hh:mm (PM/AM))
+# %5$S - event end time (e.g. hh:mm (PM/AM))
+# e.g. with weeklyNthOn:
+# "Occurs every 2 weeks on Sunday and Friday
+#  effective 1/1/2009 until 1/1/2010
+#  from 5:00 PM to 6:00 PM"
+repeatDetailsUntil=Nastane %1$S\naktívna dňa %2$S do %3$S\n v čase od %4$S do %5$S.
+
+# LOCALIZATION NOTE (repeatDetailsUntilAllDay):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - A rule string (see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event end date (e.g. mm/gg/yyyy)
+# e.g. with monthlyDayOfNth and all day event:
+# "Occurs day 3 of every 5 month
+#  effective 1/1/2009 until 1/1/2010"
+repeatDetailsUntilAllDay=Nastane %1$S\naktívna dňa %2$S do %3$S.
+
+# LOCALIZATION NOTE (repeatDetailsInfinite):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - A rule string (see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event start time (e.g. hh:mm (PM/AM))
+# %4$S - event end time (e.g. hh:mm (PM/AM))
+# e.g. with monthlyDayOfNth:
+# "Occurs day 3 of every 5 month
+#  effective 1/1/2009
+#  from 5:00 PM to 6:00 PM"
+repeatDetailsInfinite=Nastane %1$S\naktívna dňa %2$S\n v čase od %3$S do %4$S.
+
+# LOCALIZATION NOTE (repeatDetailsInfiniteAllDay):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - A rule string (see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# e.g. with monthlyDayOfNth and all day event:
+# "Occurs day 3 of every 5 month
+#  effective 1/1/2009"
+repeatDetailsInfiniteAllDay=Nastane %1$S\naktívna dňa %2$S.
+
+# LOCALIZATION NOTE (ruleTooComplex):
+# This string is shown in the reminder details area if our code can't handle the
+# complexity of the recurrence rule yet.
+ruleTooComplex=Kliknutím sem zobrazíte podrobnosti.
+
 newEvent=Nová udalosť
 newTask=Nová úloha
 
@@ -139,9 +329,9 @@ removeCalendarsText=Naozaj chcete odstrániť všetky prílohy (celkom %1$S)?
 
 # Recurrence Dialog Widget Order
 # LOCALIZATION NOTE: You can change the order of below params
-# Edit recurrence window -> Recurrence pattern -> Repeat montly
-# %1$S - ordinal, %2$S - weekday
-# e.g. "First Saturday"
+# Edit recurrence window -> Recurrence pattern -> Repeat monthly
+# %1$S - ordinal with article, %2$S - weekday
+# e.g. "the First Saturday"
 monthlyOrder=%1$S %2$S
 
 # Edit recurrence window -> Recurrence pattern -> Repeat yearly
@@ -151,7 +341,7 @@ monthlyOrder=%1$S %2$S
 yearlyOrder=%1$S %3$S %2$S
 
 # Edit recurrence window -> Recurrence pattern -> Repeat yearly
-# %1$S - ordinal, %2$S - weekday, %3$S  - of, %4$S - month
-# e.g. "First Saturday of September"
+# %1$S - ordinal with article, %2$S - weekday, %3$S  - of, %4$S - month
+# e.g. "the First Saturday of September"
 # If you don't need %3$S in your locale - please put this on the third place.
-yearlyOrder2=%1$S %2$S %3$S %4$S
+yearlyOrder2=%1$S %2$S %4$S %3$S
