--- a/sk/calendar/chrome/calendar/calendar.properties
+++ b/sk/calendar/chrome/calendar/calendar.properties
@@ -114,9 +114,9 @@ unknownTimezonesError=Pri príprave kalendára umiestneného na %1$S na použiti
 missingCalendarTimezonesError=Neboli nájdené definície časových zón! Nainštalujte súbor calendar-timezones.xpi.
 
 # Sample: Unknown timezone "USPacific" in "Dentist Appt".  Using the 'floating' local timezone instead: 2008/02/28 14:00:00
-unknownTimezoneInItem=Neznáma časová zóna "%1$S" v "%2$S". Používa sa 'plávajúca' lokálna časová zóna: %3$S
+unknownTimezoneInItem=Neznáma časová zóna "%1$S" v "%2$S". Používa sa 'plávajúca' miestna časová zóna: %3$S
 TimezoneErrorsAlertTitle=Chyby časových zón
-TimezoneErrorsSeeConsole=Viď Chybovú konzolu: Neznáme časové zóny sú spracované ako 'plávajúce' lokálne časové zóny.
+TimezoneErrorsSeeConsole=Viď Chybovú konzolu: Neznáme časové zóny sú spracované ako 'plávajúce' miestne časové zóny.
 
 unsubscribeCalendarTitle=Neodoberať kalendár
 
@@ -466,10 +466,10 @@ taskDetailsEndDate=Termín splnenia:
 #    %2$S will be replaced with the name of the timezone
 datetimeWithTimezone=%1$S, %2$S
 
-# LOCALIZATION NOTE (longCalendarWeek):
+# LOCALIZATION NOTE (singleLongCalendarWeek):
 # used for display of calendar weeks in short form like 'Calendar Week 43'
 #    %1$S will be replaced with the index of the week
-longCalendarWeek=%1$S. týždeň
+singleLongCalendarWeek=%1$S. týždeň
 
 # LOCALIZATION NOTE (severalLongCalendarWeeks):
 # used for display of calendar weeks in short form like 'Calendar Weeks 43 - 45'
@@ -477,10 +477,10 @@ longCalendarWeek=%1$S. týždeň
 #    %2$S will be replaced with the index of the end-week
 severalLongCalendarWeeks=Týždne %1$S-%2$S
 
-# LOCALIZATION NOTE (shortCalendarWeek):
+# LOCALIZATION NOTE (singleShortCalendarWeek):
 # used for display of calendar weeks in short form like 'CW 43'
 #    %1$S will be replaced with the index of the week
-shortCalendarWeek=%1$S. týž.
+singleShortCalendarWeek=%1$S. týž.
 
 # LOCALIZATION NOTE (severalShortCalendarWeeks):
 # used for display of calendar weeks in short form like 'CWs 43 - 45'
@@ -488,25 +488,12 @@ shortCalendarWeek=%1$S. týž.
 #    %2$S will be replaced with the index of the end-week
 severalShortCalendarWeeks=Týž. %1$S-%2$S
 
-oneDayBack=Jeden deň naspäť
-oneDayForward=Jeden deň dopredu
-oneMonthBack=Jeden mesiac naspäť
-oneMonthForward=Jeden mesiac dopredu
-oneWeekBack=Jeden týždeň naspäť
-oneWeekForward=Jeden týždeň dopredu
-gotoToday=Prejsť na Dnes
-
 # Task tree, "Due In" column.
-dueInDays1=1 deň
-# Used for "2 days"
-dueInDays2=2 dni
-# Used for more than 2 days
-dueInDaysN=%1$S dní
-
-dueInHours1=1 hodina
-dueInHours2=2 hodiny
-dueInHoursN=%1$S hodín
-dueInLessThanOneHour=< 1 hodina
+# LOCALIZATION NOTE (dueInDays, dueInHours): Semi-colon list of plural
+# forms. See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+dueInDays=#1 deň;#1 dni;#1 dní
+dueInHours=#1 hodinu;#1 hodiny;#1 hodín
+dueInLessThanOneHour=< 1 hodinu
 
 # LOCALIZATION NOTE (monthInYear):
 # used for display of Month-dates like 'December 2008'
@@ -559,9 +546,31 @@ datetimeIntervalOnSameDay=%1$S %2$S – %3$S
 #    %4$S will be replaced with the time of the end date
 datetimeIntervalOnSeveralDays=%1$S %2$S – %3$S %4$S
 
+# LOCALIZATION NOTE (datetimeIntervalTaskWithoutDate):
+# used for task without start and due date
+# (showed only in exported calendar in Html format)
+datetimeIntervalTaskWithoutDate= nezadaný dátum začiatku alebo konca
+# LOCALIZATION NOTE (datetimeIntervalTaskWithoutDueDate):
+# used for intervals in task with only start date
+# displayed form is 'start date 5 Jan 2006 13:00'
+# (showed only in exported calendar in Html format)
+#    %1$S will be replaced with the date of the start date
+#    %2$S will be replaced with the time of the start date
+datetimeIntervalTaskWithoutDueDate=začiatok %1$S %2$S
+# LOCALIZATION NOTE (datetimeIntervalTaskWithoutStartDate):
+# used for intervals in task with only due date
+# displayed form is 'due date 5 Jan 2006 13:00'
+# (showed only in exported calendar in Html format)
+#    %1$S will be replaced with the date of the due date
+#    %2$S will be replaced with the time of the due date
+datetimeIntervalTaskWithoutStartDate=termín %1$S %2$S
+
 deleteTaskLabel=Odstrániť úlohu
+deleteTaskMessage=Naozaj chcete odstrániť túto úlohu?
 deleteTaskAccesskey=d
 deleteItemLabel=Odstrániť
+deleteItemMessage=Naozaj chcete odstrániť túto položku?
 deleteItemAccesskey=d
 deleteEventLabel=Odstrániť udalosť
+deleteEventMessage=Naozaj chcete odstrániť túto udalosť?
 deleteEventAccesskey=d
