--- a/sk/calendar/chrome/calendar/timezones.properties
+++ b/sk/calendar/chrome/calendar/timezones.properties
@@ -44,7 +44,7 @@ extensions.calendar-timezones@mozilla.org.name=Definície časových zón pre Mo
 extensions.calendar-timezones@mozilla.org.description=Definície časových zón potrebné pre Sunbird a Lightning
 extensions.calendar-timezones@mozilla.org.creator=Projekt Mozilla Calendar
 
-pref.timezone.floating=Lokálny čas
+pref.timezone.floating=Miestny čas
 pref.timezone.UTC=UTC/GMT
 
 # I've derived this list out of timezones.dtd
@@ -52,10 +52,10 @@ pref.timezone.UTC=UTC/GMT
 # - corrected 'St xyz' to 'St. xyz'
 
 # timezone names:
-pref.timezone.Africa.Abidjan=Afrika/Abidjan
-pref.timezone.Africa.Accra=Afrika/Accra
-pref.timezone.Africa.Addis_Ababa=Afrika/Addis Ababa
-pref.timezone.Africa.Algiers=Afrika/Algiers
+pref.timezone.Africa.Abidjan=Afrika/Abidžan
+pref.timezone.Africa.Accra=Afrika/Akkra
+pref.timezone.Africa.Addis_Ababa=Afrika/Addis Abeba
+pref.timezone.Africa.Algiers=Afrika/Alžír
 pref.timezone.Africa.Asmara=Afrika/Asmara
 pref.timezone.Africa.Bamako=Afrika/Bamako
 pref.timezone.Africa.Bangui=Afrika/Bangui
@@ -64,21 +64,21 @@ pref.timezone.Africa.Bissau=Afrika/Bissau
 pref.timezone.Africa.Blantyre=Afrika/Blantyre
 pref.timezone.Africa.Brazzaville=Afrika/Brazzaville
 pref.timezone.Africa.Bujumbura=Afrika/Bujumbura
-pref.timezone.Africa.Cairo=Afrika/Cairo
+pref.timezone.Africa.Cairo=Afrika/Káhira
 pref.timezone.Africa.Casablanca=Afrika/Casablanca
 pref.timezone.Africa.Ceuta=Afrika/Ceuta
-pref.timezone.Africa.Conakry=Afrika/Conakry
+pref.timezone.Africa.Conakry=Afrika/Konakry
 pref.timezone.Africa.Dakar=Afrika/Dakar
-pref.timezone.Africa.Dar_es_Salaam=Afrika/Dar es Salaam
-pref.timezone.Africa.Djibouti=Afrika/Djibouti
+pref.timezone.Africa.Dar_es_Salaam=Afrika/Dar es Salám
+pref.timezone.Africa.Djibouti=Afrika/Džibuti
 pref.timezone.Africa.Douala=Afrika/Douala
-pref.timezone.Africa.El_Aaiun=Afrika/El Aaiun
+pref.timezone.Africa.El_Aaiun=Afrika/El-Aaiún
 pref.timezone.Africa.Freetown=Afrika/Freetown
 pref.timezone.Africa.Gaborone=Afrika/Gaborone
 pref.timezone.Africa.Harare=Afrika/Harare
 pref.timezone.Africa.Johannesburg=Afrika/Johannesburg
 pref.timezone.Africa.Kampala=Afrika/Kampala
-pref.timezone.Africa.Khartoum=Afrika/Khartoum
+pref.timezone.Africa.Khartoum=Afrika/Chartúm
 pref.timezone.Africa.Kigali=Afrika/Kigali
 pref.timezone.Africa.Kinshasa=Afrika/Kinshasa
 pref.timezone.Africa.Lagos=Afrika/Lagos
@@ -91,7 +91,7 @@ pref.timezone.Africa.Malabo=Afrika/Malabo
 pref.timezone.Africa.Maputo=Afrika/Maputo
 pref.timezone.Africa.Maseru=Afrika/Maseru
 pref.timezone.Africa.Mbabane=Afrika/Mbabane
-pref.timezone.Africa.Mogadishu=Afrika/Mogadishu
+pref.timezone.Africa.Mogadishu=Afrika/Mogadišo
 pref.timezone.Africa.Monrovia=Afrika/Monrovia
 pref.timezone.Africa.Nairobi=Afrika/Nairobi
 pref.timezone.Africa.Ndjamena=Afrika/Ndjamena
@@ -99,8 +99,8 @@ pref.timezone.Africa.Niamey=Afrika/Niamey
 pref.timezone.Africa.Nouakchott=Afrika/Nouakchott
 pref.timezone.Africa.Ouagadougou=Afrika/Ouagadougou
 pref.timezone.Africa.Porto-Novo=Afrika/Porto-Novo
-pref.timezone.Africa.Sao_Tome=Afrika/Sao Tome
-pref.timezone.Africa.Tripoli=Afrika/Tripoli
+pref.timezone.Africa.Sao_Tome=Afrika/Svätý Tomáš
+pref.timezone.Africa.Tripoli=Afrika/Tripolis
 pref.timezone.Africa.Tunis=Afrika/Tunis
 pref.timezone.Africa.Windhoek=Afrika/Windhoek
 pref.timezone.America.Adak=Amerika/Adak
@@ -110,20 +110,20 @@ pref.timezone.America.Antigua=Amerika/Antigua
 pref.timezone.America.Araguaina=Amerika/Araguaina
 pref.timezone.America.Argentina.Buenos_Aires=Amerika/Argentína/Buenos Aires
 pref.timezone.America.Argentina.Catamarca=Amerika/Argentína/Catamarca
-pref.timezone.America.Argentina.Cordoba=Amerika/Argentína/Cordoba
+pref.timezone.America.Argentina.Cordoba=Amerika/Argentína/Córdoba
 pref.timezone.America.Argentina.Jujuy=Amerika/Argentína/Jujuy
 pref.timezone.America.Argentina.La_Rioja=Amerika/Argentína/La Rioja
 pref.timezone.America.Argentina.Mendoza=Amerika/Argentína/Mendoza
 pref.timezone.America.Argentina.Rio_Gallegos=Amerika/Argentína/Rio Gallegos
 pref.timezone.America.Argentina.San_Juan=Amerika/Argentína/San Juan
-pref.timezone.America.Argentina.Tucuman=Amerika/Argentína/Tucuman
+pref.timezone.America.Argentina.Tucuman=Amerika/Argentína/San Miguel de Tucumán
 pref.timezone.America.Argentina.Ushuaia=Amerika/Argentína/Ushuaia
 pref.timezone.America.Aruba=Amerika/Aruba
-pref.timezone.America.Asuncion=Amerika/Asuncion
+pref.timezone.America.Asuncion=Amerika/Asunción
 pref.timezone.America.Atikokan=Amerika/Atikokan
-pref.timezone.America.Bahia=Amerika/Bahia
+pref.timezone.America.Bahia=Amerika/Bahía
 pref.timezone.America.Barbados=Amerika/Barbados
-pref.timezone.America.Belem=Amerika/Belem
+pref.timezone.America.Belem=Amerika/Belém
 pref.timezone.America.Belize=Amerika/Belize
 pref.timezone.America.Blanc-Sablon=Amerika/Blanc-Sablon
 pref.timezone.America.Boa_Vista=Amerika/Boa Vista
@@ -131,13 +131,13 @@ pref.timezone.America.Bogota=Amerika/Bogota
 pref.timezone.America.Boise=Amerika/Boise
 pref.timezone.America.Cambridge_Bay=Amerika/Cambridge Bay
 pref.timezone.America.Campo_Grande=Amerika/Campo Grande
-pref.timezone.America.Cancun=Amerika/Cancun
+pref.timezone.America.Cancun=Amerika/Cancún
 pref.timezone.America.Caracas=Amerika/Caracas
 pref.timezone.America.Cayenne=Amerika/Cayenne
-pref.timezone.America.Cayman=Amerika/Cayman
+pref.timezone.America.Cayman=Amerika/Kajman
 pref.timezone.America.Chicago=Amerika/Chicago
 pref.timezone.America.Chihuahua=Amerika/Chihuahua
-pref.timezone.America.Costa_Rica=Amerika/Costa Rica
+pref.timezone.America.Costa_Rica=Amerika/Kostarika
 pref.timezone.America.Cuiaba=Amerika/Cuiaba
 pref.timezone.America.Curacao=Amerika/Curacao
 pref.timezone.America.Danmarkshavn=Amerika/Danmarkshavn
@@ -145,13 +145,13 @@ pref.timezone.America.Dawson=Amerika/Dawson
 pref.timezone.America.Dawson_Creek=Amerika/Dawson Creek
 pref.timezone.America.Denver=Amerika/Denver
 pref.timezone.America.Detroit=Amerika/Detroit
-pref.timezone.America.Dominica=Amerika/Dominica
+pref.timezone.America.Dominica=Amerika/Dominika
 pref.timezone.America.Edmonton=Amerika/Edmonton
 pref.timezone.America.Eirunepe=Amerika/Eirunepe
 pref.timezone.America.El_Salvador=Amerika/El Salvador
 pref.timezone.America.Fortaleza=Amerika/Fortaleza
 pref.timezone.America.Glace_Bay=Amerika/Glace Bay
-pref.timezone.America.Godthab=Amerika/Godthab
+pref.timezone.America.Godthab=Amerika/Nuuk
 pref.timezone.America.Goose_Bay=Amerika/Goose Bay
 pref.timezone.America.Grand_Turk=Amerika/Grand Turk
 pref.timezone.America.Grenada=Amerika/Grenada
@@ -170,7 +170,7 @@ pref.timezone.America.Indiana.Vevay=Amerika/Indiana/Vevay
 pref.timezone.America.Indiana.Vincennes=Amerika/Indiana/Vincennes
 pref.timezone.America.Inuvik=Amerika/Inuvik
 pref.timezone.America.Iqaluit=Amerika/Iqaluit
-pref.timezone.America.Jamaica=Amerika/Jamaica
+pref.timezone.America.Jamaica=Amerika/Jamaika
 pref.timezone.America.Juneau=Amerika/Juneau
 pref.timezone.America.Kentucky.Louisville=Amerika/Kentucky/Louisville
 pref.timezone.America.Kentucky.Monticello=Amerika/Kentucky/Monticello
@@ -180,11 +180,11 @@ pref.timezone.America.Los_Angeles=Amerika/Los Angeles
 pref.timezone.America.Maceio=Amerika/Maceio
 pref.timezone.America.Managua=Amerika/Managua
 pref.timezone.America.Manaus=Amerika/Manaus
-pref.timezone.America.Martinique=Amerika/Martinique
+pref.timezone.America.Martinique=Amerika/Martinik
 pref.timezone.America.Mazatlan=Amerika/Mazatlan
 pref.timezone.America.Menominee=Amerika/Menominee
 pref.timezone.America.Merida=Amerika/Merida
-pref.timezone.America.Mexico_City=Amerika/Mexico City
+pref.timezone.America.Mexico_City=Amerika/Mexiko
 pref.timezone.America.Miquelon=Amerika/Miquelon
 pref.timezone.America.Moncton=Amerika/Moncton
 pref.timezone.America.Monterrey=Amerika/Monterrey
@@ -205,7 +205,7 @@ pref.timezone.America.Phoenix=Amerika/Phoenix
 pref.timezone.America.Port-au-Prince=Amerika/Port-au-Prince
 pref.timezone.America.Port_of_Spain=Amerika/Port of Spain
 pref.timezone.America.Porto_Velho=Amerika/Porto Velho
-pref.timezone.America.Puerto_Rico=Amerika/Puerto Rico
+pref.timezone.America.Puerto_Rico=Amerika/Portoriko
 pref.timezone.America.Rainy_River=Amerika/Rainy River
 pref.timezone.America.Rankin_Inlet=Amerika/Rankin Inlet
 pref.timezone.America.Recife=Amerika/Recife
@@ -213,14 +213,14 @@ pref.timezone.America.Regina=Amerika/Regina
 pref.timezone.America.Rio_Branco=Amerika/Rio Branco
 pref.timezone.America.Santiago=Amerika/Santiago
 pref.timezone.America.Santo_Domingo=Amerika/Santo Domingo
-pref.timezone.America.Sao_Paulo=Amerika/Sao Paulo
+pref.timezone.America.Sao_Paulo=Amerika/São Paulo
 pref.timezone.America.Scoresbysund=Amerika/Scoresbysund
 pref.timezone.America.Shiprock=Amerika/Shiprock
 pref.timezone.America.St_Johns=Amerika/St Johns
-pref.timezone.America.St_Kitts=Amerika/St Kitts
-pref.timezone.America.St_Lucia=Amerika/St Lucia
-pref.timezone.America.St_Thomas=Amerika/St Thomas
-pref.timezone.America.St_Vincent=Amerika/St Vincent
+pref.timezone.America.St_Kitts=Amerika/Svätý Krištof a Nevis
+pref.timezone.America.St_Lucia=Amerika/Svätá Lucia
+pref.timezone.America.St_Thomas=Amerika/Svätý Tomáš
+pref.timezone.America.St_Vincent=Amerika/Svätý Vincent
 pref.timezone.America.Swift_Current=Amerika/Swift Current
 pref.timezone.America.Tegucigalpa=Amerika/Tegucigalpa
 pref.timezone.America.Thule=Amerika/Thule
@@ -245,88 +245,88 @@ pref.timezone.Antarctica.Syowa=Antarktída/Syowa
 pref.timezone.Antarctica.Vostok=Antarktída/Vostok
 pref.timezone.Arctic.Longyearbyen=Arktída/Longyearbyen
 pref.timezone.Asia.Aden=Ázia/Aden
-pref.timezone.Asia.Almaty=Ázia/Almaty
-pref.timezone.Asia.Amman=Ázia/Amman
+pref.timezone.Asia.Almaty=Ázia/Alma-Ata
+pref.timezone.Asia.Amman=Ázia/Ammán
 pref.timezone.Asia.Anadyr=Ázia/Anadyr
 pref.timezone.Asia.Aqtau=Ázia/Aqtau
 pref.timezone.Asia.Aqtobe=Ázia/Aqtobe
-pref.timezone.Asia.Ashgabat=Ázia/Ashgabat
-pref.timezone.Asia.Baghdad=Ázia/Baghdad
-pref.timezone.Asia.Bahrain=Ázia/Bahrain
+pref.timezone.Asia.Ashgabat=Ázia/Ašchabad
+pref.timezone.Asia.Baghdad=Ázia/Bagdad
+pref.timezone.Asia.Bahrain=Ázia/Bahrajn
 pref.timezone.Asia.Baku=Ázia/Baku
 pref.timezone.Asia.Bangkok=Ázia/Bangkok
-pref.timezone.Asia.Beirut=Ázia/Beirut
-pref.timezone.Asia.Bishkek=Ázia/Bishkek
-pref.timezone.Asia.Brunei=Ázia/Brunei
+pref.timezone.Asia.Beirut=Ázia/Bejrút
+pref.timezone.Asia.Bishkek=Ázia/Biškek
+pref.timezone.Asia.Brunei=Ázia/Brunej
 pref.timezone.Asia.Choibalsan=Ázia/Choibalsan
-pref.timezone.Asia.Chongqing=Ázia/Chongqing
-pref.timezone.Asia.Colombo=Ázia/Colombo
-pref.timezone.Asia.Damascus=Ázia/Damascus
-pref.timezone.Asia.Dhaka=Ázia/Dhaka
+pref.timezone.Asia.Chongqing=Ázia/Čchung-čching
+pref.timezone.Asia.Colombo=Ázia/Kolombo
+pref.timezone.Asia.Damascus=Ázia/Damask
+pref.timezone.Asia.Dhaka=Ázia/Dháka
 pref.timezone.Asia.Dili=Ázia/Dili
-pref.timezone.Asia.Dubai=Ázia/Dubai
-pref.timezone.Asia.Dushanbe=Ázia/Dushanbe
+pref.timezone.Asia.Dubai=Ázia/Dubaj
+pref.timezone.Asia.Dushanbe=Ázia/Dušanbe
 pref.timezone.Asia.Gaza=Ázia/Gaza
 pref.timezone.Asia.Harbin=Ázia/Harbin
-pref.timezone.Asia.Hong_Kong=Ázia/Hong Kong
+pref.timezone.Asia.Hong_Kong=Ázia/Hongkong
 pref.timezone.Asia.Hovd=Ázia/Hovd
 pref.timezone.Asia.Irkutsk=Ázia/Irkutsk
 pref.timezone.Asia.Istanbul=Ázia/Istanbul
 pref.timezone.Asia.Jakarta=Ázia/Jakarta
 pref.timezone.Asia.Jayapura=Ázia/Jayapura
-pref.timezone.Asia.Jerusalem=Ázia/Jerusalem
-pref.timezone.Asia.Kabul=Ázia/Kabul
-pref.timezone.Asia.Kamchatka=Ázia/Kamchatka
-pref.timezone.Asia.Karachi=Ázia/Karachi
+pref.timezone.Asia.Jerusalem=Ázia/Jeruzalem
+pref.timezone.Asia.Kabul=Ázia/Kábul
+pref.timezone.Asia.Kamchatka=Ázia/Kamčatka
+pref.timezone.Asia.Karachi=Ázia/Karáči
 pref.timezone.Asia.Kashgar=Ázia/Kashgar
-pref.timezone.Asia.Katmandu=Ázia/Katmandu
-pref.timezone.Asia.Krasnoyarsk=Ázia/Krasnoyarsk
+pref.timezone.Asia.Kathmandu=Ázia/Káthmandu
+pref.timezone.Asia.Krasnoyarsk=Ázia/Krasnojarsk
 pref.timezone.Asia.Kuala_Lumpur=Ázia/Kuala Lumpur
 pref.timezone.Asia.Kuching=Ázia/Kuching
-pref.timezone.Asia.Kuwait=Ázia/Kuwait
+pref.timezone.Asia.Kuwait=Ázia/Kuvajt
 pref.timezone.Asia.Macau=Ázia/Macau
 pref.timezone.Asia.Magadan=Ázia/Magadan
 pref.timezone.Asia.Makassar=Ázia/Makassar
 pref.timezone.Asia.Manila=Ázia/Manila
 pref.timezone.Asia.Muscat=Ázia/Muscat
-pref.timezone.Asia.Nicosia=Ázia/Nicosia
+pref.timezone.Asia.Nicosia=Ázia/Nikózia
 pref.timezone.Asia.Novosibirsk=Ázia/Novosibirsk
 pref.timezone.Asia.Omsk=Ázia/Omsk
 pref.timezone.Asia.Oral=Ázia/Oral
 pref.timezone.Asia.Phnom_Penh=Ázia/Phnom Penh
 pref.timezone.Asia.Pontianak=Ázia/Pontianak
-pref.timezone.Asia.Pyongyang=Ázia/Pyongyang
-pref.timezone.Asia.Qatar=Ázia/Qatar
+pref.timezone.Asia.Pyongyang=Ázia/Pchjongjang
+pref.timezone.Asia.Qatar=Ázia/Katar
 pref.timezone.Asia.Qyzylorda=Ázia/Qyzylorda
-pref.timezone.Asia.Rangoon=Ázia/Rangoon
-pref.timezone.Asia.Riyadh=Ázia/Riyadh
+pref.timezone.Asia.Rangoon=Ázia/Rangún
+pref.timezone.Asia.Riyadh=Ázia/Rijád
 pref.timezone.Asia.Sakhalin=Ázia/Sakhalin
 pref.timezone.Asia.Samarkand=Ázia/Samarkand
-pref.timezone.Asia.Seoul=Ázia/Seoul
-pref.timezone.Asia.Shanghai=Ázia/Shanghai
-pref.timezone.Asia.Singapore=Ázia/Singapore
-pref.timezone.Asia.Taipei=Ázia/Taipei
-pref.timezone.Asia.Tashkent=Ázia/Tashkent
+pref.timezone.Asia.Seoul=Ázia/Soul
+pref.timezone.Asia.Shanghai=Ázia/Šanghaj
+pref.timezone.Asia.Singapore=Ázia/Singapur
+pref.timezone.Asia.Taipei=Ázia/Tchaj-pej
+pref.timezone.Asia.Tashkent=Ázia/Taškent
 pref.timezone.Asia.Tbilisi=Ázia/Tbilisi
-pref.timezone.Asia.Tehran=Ázia/Tehran
+pref.timezone.Asia.Tehran=Ázia/Teherán
 pref.timezone.Asia.Thimphu=Ázia/Thimphu
-pref.timezone.Asia.Tokyo=Ázia/Tokyo
-pref.timezone.Asia.Ulaanbaatar=Ázia/Ulaanbaatar
-pref.timezone.Asia.Urumqi=Ázia/Urumqi
+pref.timezone.Asia.Tokyo=Ázia/Tokio
+pref.timezone.Asia.Ulaanbaatar=Ázia/Ulánbátar
+pref.timezone.Asia.Urumqi=Ázia/Urumči
 pref.timezone.Asia.Vientiane=Ázia/Vientiane
 pref.timezone.Asia.Vladivostok=Ázia/Vladivostok
-pref.timezone.Asia.Yakutsk=Ázia/Yakutsk
-pref.timezone.Asia.Yekaterinburg=Ázia/Yekaterinburg
-pref.timezone.Asia.Yerevan=Ázia/Yerevan
-pref.timezone.Atlantic.Azores=Atlantik/Azores
-pref.timezone.Atlantic.Bermuda=Atlantik/Bermuda
-pref.timezone.Atlantic.Canary=Atlantik/Canary
-pref.timezone.Atlantic.Cape_Verde=Atlantik/Cape Verde
-pref.timezone.Atlantic.Faroe=Atlantik/Faroe
+pref.timezone.Asia.Yakutsk=Ázia/Jakutsk
+pref.timezone.Asia.Yekaterinburg=Ázia/Jekaterinburg
+pref.timezone.Asia.Yerevan=Ázia/Jerevan
+pref.timezone.Atlantic.Azores=Atlantik/Azory
+pref.timezone.Atlantic.Bermuda=Atlantik/Bermudy
+pref.timezone.Atlantic.Canary=Atlantik/Kanárske ostrovy
+pref.timezone.Atlantic.Cape_Verde=Atlantik/Kapverdy
+pref.timezone.Atlantic.Faroe=Atlantik/Faerská ostrovy
 pref.timezone.Atlantic.Madeira=Atlantik/Madeira
-pref.timezone.Atlantic.Reykjavik=Atlantik/Reykjavik
-pref.timezone.Atlantic.South_Georgia=Atlantik/South Georgia
-pref.timezone.Atlantic.St_Helena=Atlantik/St Helena
+pref.timezone.Atlantic.Reykjavik=Atlantik/Reykjavík
+pref.timezone.Atlantic.South_Georgia=Atlantik/Južná Georgia
+pref.timezone.Atlantic.St_Helena=Atlantik/Svätá Helena
 pref.timezone.Atlantic.Stanley=Atlantik/Stanley
 pref.timezone.Australia.Adelaide=Austrália/Adelaide
 pref.timezone.Australia.Brisbane=Austrália/Brisbane
@@ -361,9 +361,9 @@ pref.timezone.Europe.Jersey=Európa/Jersey
 pref.timezone.Europe.Kaliningrad=Európa/Kaliningrad
 pref.timezone.Europe.Kiev=Európa/Kyjev
 pref.timezone.Europe.Lisbon=Európa/Lisabon
-pref.timezone.Europe.Ljubljana=Európa/Ljubljana
+pref.timezone.Europe.Ljubljana=Európa/Ľubľana
 pref.timezone.Europe.London=Európa/Londýn
-pref.timezone.Europe.Luxembourg=Európa/Luxembourg
+pref.timezone.Europe.Luxembourg=Európa/Luxemburg
 pref.timezone.Europe.Madrid=Európa/Madrid
 pref.timezone.Europe.Malta=Európa/Malta
 pref.timezone.Europe.Mariehamn=Európa/Mariehamn
@@ -380,7 +380,7 @@ pref.timezone.Europe.Rome=Európa/Rím
 pref.timezone.Europe.Samara=Európa/Samara
 pref.timezone.Europe.San_Marino=Európa/San Maríno
 pref.timezone.Europe.Sarajevo=Európa/Sarajevo
-pref.timezone.Europe.Simferopol=Európa/Simferopol
+pref.timezone.Europe.Simferopol=Európa/Simferopoľ
 pref.timezone.Europe.Skopje=Európa/Skopje
 pref.timezone.Europe.Sofia=Európa/Sofia
 pref.timezone.Europe.Stockholm=Európa/Štokholm
@@ -394,7 +394,7 @@ pref.timezone.Europe.Vilnius=Európa/Vilnius
 pref.timezone.Europe.Volgograd=Európa/Volgograd
 pref.timezone.Europe.Warsaw=Európa/Varšava
 pref.timezone.Europe.Zagreb=Európa/Záhreb
-pref.timezone.Europe.Zaporozhye=Európa/Zaporozhye
+pref.timezone.Europe.Zaporozhye=Európa/Záporožie
 pref.timezone.Europe.Zurich=Európa/Zürich
 pref.timezone.Indian.Antananarivo=Indický oceán/Antananarivo
 pref.timezone.Indian.Chagos=Indický oceán/Chagos
@@ -414,9 +414,9 @@ pref.timezone.Pacific.Easter=Pacifik/Easter
 pref.timezone.Pacific.Efate=Pacifik/Efate
 pref.timezone.Pacific.Enderbury=Pacifik/Enderbury
 pref.timezone.Pacific.Fakaofo=Pacifik/Fakaofo
-pref.timezone.Pacific.Fiji=Pacifik/Fiji
+pref.timezone.Pacific.Fiji=Pacifik/Fidži
 pref.timezone.Pacific.Funafuti=Pacifik/Funafuti
-pref.timezone.Pacific.Galapagos=Pacifik/Galapagos
+pref.timezone.Pacific.Galapagos=Pacifik/Galapágy
 pref.timezone.Pacific.Gambier=Pacifik/Gambier
 pref.timezone.Pacific.Guadalcanal=Pacifik/Guadalcanal
 pref.timezone.Pacific.Guam=Pacifik/Guam
