--- a/sk/mail/chrome/messenger-mapi/mapi.properties
+++ b/sk/mail/chrome/messenger-mapi/mapi.properties
@@ -1,15 +1,15 @@
 # Mail Integration Dialog
 dialogTitle=%S
 dialogText=Chcete používať %S ako predvolený program pre poštu?
-newsDialogText=Chcete používať program %S ako predvolený program pre diskusné skupiny?
-feedDialogText=Chcete používať program %S ako predvolený program pre kanály RSS?
+newsDialogText=Chcete používať %S ako predvolený program pre diskusné skupiny?
+feedDialogText=Chcete používať %S ako predvolený program pre informačné kanály?
 checkboxText=Nabudúce toto okno už nezobrazovať
 setDefaultMail=%S nie je nastavený ako predvolený program pre poštu. Chcete ho nastaviť ako predvolený program pre poštu?
 setDefaultNews=%S nie je nastavený ako predvolený program pre diskusné skupiny. Chcete ho nastaviť ako predvolený program pre diskusné skupiny?
-setDefaultFeed=%S nie je nastavený ako predvolený program pre kanály RSS. Chcete ho nastaviť ako predvolený program pre kanály RSS?
+setDefaultFeed=%S nie je nastavený ako predvolený program pre informačné kanály. Chcete ho nastaviť ako predvolený program pre informačné kanály?
 alreadyDefaultMail=%S je už nastavený ako predvolený program pre poštu.
 alreadyDefaultNews=%S je už nastavený ako predvolený program pre diskusné skupiny.
-alreadyDefaultFeed=%S je už nastavený ako predvolený program pre RSS kanály.
+alreadyDefaultFeed=%S je už nastavený ako predvolený program pre informačné kanály.
 
 # MAPI Messages
 loginText=Zadajte vaše heslo pre %S:
