--- a/sk/mail/chrome/messenger/addressbook/addressBook.properties
+++ b/sk/mail/chrome/messenger/addressbook/addressBook.properties
@@ -44,12 +44,12 @@ emptyListName=Musíte zadať názov zoznamu.
 lastFirstFormat=%S %S
 firstLastFormat=%S %S
 
-newCardTitle=Nová karta
-# %S will be the card's display name
-newCardTitleWithDisplayName=Nová karta pre %S
-editCardTitle=Úprava karty
-# %S will be the card's display name
-editCardTitleWithDisplayName=Úprava karty pre %S
+newContactTitle=Nový kontakt
+# %S will be the contact's display name
+newContactTitleWithDisplayName=Nový kontakt %S
+editContactTitle=Úprava kontaktu
+# %S will be the contact's display name
+editContactTitleWithDisplayName=Úprava kontaktu %S
 # don't translate vCard
 editVCardTitle=Úprava vizitky (vCard)
 # %S will be the card's display name, don't translate vCard
@@ -61,7 +61,6 @@ cardRequiredDataMissingTitle=Chýbajú požadované informácie
 incorrectEmailAddressFormatMessage=Primárna e-mailová adresa musí byť v tvare pouzivatel@host.
 incorrectEmailAddressFormatTitle=Nesprávny formát e-mailovej adresy
 
-viewCardTitle=Karta pre %S
 viewListTitle=Rozosielací zoznam: %S
 mailListNameExistsTitle=Rozosielací zoznam už existuje
 mailListNameExistsMessage=Rozosielací zoznam s týmto názvom už existuje. Zadajte iný názov.
@@ -72,7 +71,7 @@ confirmDeleteAddressbookTitle=Odstránenie adresára
 confirmDeleteAddressbook=Naozaj chcete odstrániť označený adresár?
 confirmDeleteCollectionAddressbook=Ak odstránite tento adresár, %S už viac nebude zbierať e-mailové adresy. Naozaj chcete odstrániť označený adresár?
 confirmDeleteMailingList=Naozaj chcete odstrániť označený rozosielací zoznam?
-confirmDeleteListsAndCards=Naozaj chcete odstrániť označené karty a rozosielacie zoznamy?
+confirmDeleteListsAndContacts=Naozaj chcete odstrániť označené kontakty a rozosielacie zoznamy?
 confirmDeleteMailingLists=Naozaj chcete odstrániť označené rozosielacie zoznamy?
 
 propertyPrimaryEmail=E-mailová adresa
@@ -123,18 +122,23 @@ ldap_2.servers.history.description=Zozbierané adresy
 ldap_2.servers.osx.description=Adresár systému Mac OS X
 
 # status bar stuff
-## LOCALIZATION NOTE (totalCardStatus):
-## %1$S is address book name, %2$S is card count
-totalCardStatus=Celkom kariet v adresári %1$S: %2$S
+## LOCALIZATION NOTE (totalContactStatus):
+## %1$S is address book name, %2$S is contact count
+totalContactStatus=Celkom kontaktov v adresári %1$S: %2$S
 ## LOCALIZATION NOTE (matchesFound):  do not localize %S
 noMatchFound=Neboli nájdené žiadne výsledky
 matchFound=Nájdené výsledky (celkom: 1)
 matchesFound=Nájdené výsledky (celkom: %S)
 
-cardsCopied=Skopírované karty: %S
-cardCopied=Skopírovaná 1 karta
-cardsMoved=Presunuté karty: %S
-cardMoved=Presunutá 1 karta
+## LOCALIZATION NOTE (contactsCopied): Semi-colon list of plural forms
+## %1$S is the number of contacts that were copied. This should be used multiple
+## times wherever you need it. Do not replace by %S.
+contactsCopied=Skopírovaný %1$S kontakt;Skopírované %1$S kontakty;Skopírovaných %1$S kontaktov
+
+## LOCALIZATION NOTE (contactsMoved): Semi-colon list of plural forms
+## %1$S is the number of contacts that were moved. This should be used multiple
+## times wherever you need it. Do not replace by %S.
+contactsMoved=Presunutý %1$S kontakt;Presunuté %1$S kontakty;Presunutých %1$S kontaktov
 
 # LDAP directory stuff
 invalidName=Zadajte platné meno.
