--- a/sk/mail/chrome/messenger/importMsgs.properties
+++ b/sk/mail/chrome/messenger/importMsgs.properties
@@ -274,9 +274,14 @@
 2134=Ostatné 4
 
 # Description: Address book field name
-## @name IMPORT_FIELD_DESC_END
+## @name IMPORT_FIELD_DESC
 ## @loc None
 2135=Poznámky
+
+# Description: Address book field name
+## @name IMPORT_FIELD_DESC_END
+## @loc None
+2136=Prezývka
 
 #Error strings
 ImportAlreadyInProgress=Prebieha iný import. Skúste to znovu po skončení aktuálneho importu.
