--- a/sk/mail/chrome/messenger/preferences/preferences.properties
+++ b/sk/mail/chrome/messenger/preferences/preferences.properties
@@ -9,36 +9,37 @@ domainNameErrorTitle=Chyba názvu domény
 domainDuplicationError=Doména %S už v zozname domén pre HTML alebo klasický text existuje.
 
 #### Junk
-confirmResetJunkTrainingTitle=Potvrdiť
+confirmResetJunkTrainingTitle=Potvrdenie
 confirmResetJunkTrainingText=Naozaj chcete vymazať obsah adaptívneho filtra?
-
-#### Master Password
-setMasterPassword=Nastaviť hlavné heslo…
-changeMasterPassword=Zmeniť hlavné heslo…
 
 #### Downloads
 desktopFolderName=Pracovná plocha
 myDownloadsFolderName=Preberanie
-chooseDownloadFolderTitle=Vyberte priečinok pre preberané súbory:
+chooseAttachmentsFolderTitle=Výber priečinka
 
-#### Download Actions
-extensionNone=(žiadne)
-removeButtonSingle=Odstrániť akciu
-removeButtonMultiple=Odstrániť akcie
-removeTitleSingle=Odstrániť akciu
-removeTitleMultiple=Odstrániť akcie
-removeMessageSingle=Keď sa bude preberať súbor označeného typu, vybraná akcia sa už nebude vykonávať. Naozaj chcete odstrániť túto akciu?
-removeMessageMultiple=Keď sa budú preberať súbory označených typov, vybrané akcie sa už nebudú vykonávať. Naozaj chcete odstrániť tieto akcie?
+#### Applications
+
 fileEnding=Súbor %S
-saveToDisk=Uložiť na disk
-openWith=Otvoriť pomocou %S
-actionsFiltered=Tieto akcie vyhovujú vášmu hľadaniu:
-actionsAll=Automaticky vykonať priradené akcie s každým súborom nasledovných typov:
+saveFile=Uložiť súbor
 
-#### Change Action
-extensionStringFormat=%S, %S
+# LOCALIZATION NOTE (useApp, useDefault): %S = Application name
+useApp=Použiť %S
+useDefault=Použiť %S (predvolená)
+
+useOtherApp=Použiť inú…
 fpTitleChooseApp=Výber pomocnej aplikácie
-fpTitleChooseDL=Vyberte priečinok pre preberanie súborov
+manageApp=Podrobnosti o aplikácii…
+alwaysAsk=Vždy sa opýtať
+
+# LOCALIZATION NOTE (usePluginIn):
+# %1$S = plugin name (for example "QuickTime Plugin-in 7.2")
+# %2$S = brandShortName from brand.properties (for example "Shredder")
+usePluginIn=Použiť %S (v aplikácii %S)
+
+# LOCALIZATION NOTE (typeDescriptionWithType):
+# %1$S = type description (for example "Portable Document Format")
+# %2$S = type (for example "application/pdf")
+typeDescriptionWithType=%1$S (%2$S)
 
 #### Sound Notifications
 soundFilePickerTitle=Vyberte zvuk
@@ -46,3 +47,9 @@ soundFilePickerTitle=Vyberte zvuk
 #### Shell Service
 alreadyDefaultClientTitle=Predvolený klient
 alreadyDefault=%S je už nastavený ako predvolený e-mailový klient.
+
+#### Attachment Reminder
+attachmentReminderAddDialogTitle=Pridať kľúčové slovo
+attachmentReminderAddText=Kľúčové slovo:
+attachmentReminderEditDialogTitle=Upraviť kľúčové slovo
+attachmentReminderEditText=Kľúčové slovo:
