--- a/sk/mail/chrome/messenger/prefs.properties
+++ b/sk/mail/chrome/messenger/prefs.properties
@@ -38,7 +38,7 @@ customizedEmailText=Zadajte %2$S vášho %1$S. (Napríklad, ak vaša e-mailová 
 # account manager stuff
 prefPanel-server=Nastavenie servera
 prefPanel-copies=Kópie a priečinky
-prefPanel-syncing-and-diskspace=Synchronizácia a miesto na disku
+prefPanel-synchronization=Synchronizácia a úložný priestor
 prefPanel-diskspace=Miesto na disku
 prefPanel-addressing=Písanie a adresovanie
 prefPanel-junk=Nevyžiadaná pošta
